fixed another dumb bug

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/assets/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/stylesheets/style.css"/>
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/flappy-components/stylesheets/style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -18,10 +18,10 @@
   <body>
     <div id="root"></div>
     <canvas id="c" style="position: absolute"></canvas>
-    <script src="%PUBLIC_URL%/scripts/bundle.js"></script>
-    <script src="%PUBLIC_URL%/scripts/PRNG.js"></script>
-    <script src="%PUBLIC_URL%/scripts/Bird.js"></script>
-    <script src="%PUBLIC_URL%/scripts/Pipe.js"></script>
-    <script src="%PUBLIC_URL%/scripts/script.js"></script>
+    <script src="%PUBLIC_URL%/assets/flappy-components/scripts/bundle.js"></script>
+    <script src="%PUBLIC_URL%/assets/flappy-components/scripts/PRNG.js"></script>
+    <script src="%PUBLIC_URL%/assets/flappy-components/scripts/Bird.js"></script>
+    <script src="%PUBLIC_URL%/assets/flappy-components/scripts/Pipe.js"></script>
+    <script src="%PUBLIC_URL%/assets/flappy-components/scripts/main.js"></script>
   </body>
 </html>
