--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <canvas id="c" style="position: absolute"></canvas>
+    <canvas id="flappy-c" style="position: absolute"></canvas>
     <script src="%PUBLIC_URL%/assets/flappy-components/scripts/bundle.js"></script>
     <script src="%PUBLIC_URL%/assets/flappy-components/scripts/PRNG.js"></script>
     <script src="%PUBLIC_URL%/assets/flappy-components/scripts/Bird.js"></script>
