--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,13 @@
   </head>
   <body>
     <div id="root"></div>
-    <canvas id="flappy-c" style="position: absolute"></canvas>
-    <script src="%PUBLIC_URL%/assets/flappy-components/scripts/bundle.js"></script>
-    <script src="%PUBLIC_URL%/assets/flappy-components/scripts/PRNG.js"></script>
-    <script src="%PUBLIC_URL%/assets/flappy-components/scripts/Bird.js"></script>
-    <script src="%PUBLIC_URL%/assets/flappy-components/scripts/Pipe.js"></script>
-    <script src="%PUBLIC_URL%/assets/flappy-components/scripts/main.js"></script>
+    <div id="flappy-div">
+      <canvas id="flappy-c"></canvas>
+      <script src="%PUBLIC_URL%/assets/flappy-components/scripts/bundle.js"></script>
+      <script src="%PUBLIC_URL%/assets/flappy-components/scripts/PRNG.js"></script>
+      <script src="%PUBLIC_URL%/assets/flappy-components/scripts/Bird.js"></script>
+      <script src="%PUBLIC_URL%/assets/flappy-components/scripts/Pipe.js"></script>
+      <script src="%PUBLIC_URL%/assets/flappy-components/scripts/main.js"></script>
+    </div>
   </body>
 </html>
