added UI and made the code not trash
Co-authored-by: josephwidjaja100 <josephwidjaja100@users.noreply.github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="configWindow" class="configWindow"></div> 
     <div id="flappy-div">
       <canvas id="flappy-c"></canvas>
       <script src="%PUBLIC_URL%/assets/flappy-components/scripts/bundle.js"></script>
@@ -24,6 +25,7 @@
       <script src="%PUBLIC_URL%/assets/flappy-components/scripts/Bird.js"></script>
       <script src="%PUBLIC_URL%/assets/flappy-components/scripts/Pipe.js"></script>
       <script src="%PUBLIC_URL%/assets/flappy-components/scripts/main.js"></script>
+      <script src="%PUBLIC_URL%/assets/flappy-components/scripts/UI.js"></script>
     </div>
   </body>
 </html>
