--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@500;700&display=swap" rel="stylesheet">
     <link rel="icon" href="%PUBLIC_URL%/assets/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/flappy-components/stylesheets/style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,6 +21,41 @@
   <body>
     <div id="root"></div>
     <div id="configWindow" class="configWindow"></div> 
+    <div class="mask" id="mask"></div>
+    <div class="mainMenu" id="mainMenu">
+      <div class="menuTitle">
+        SimAI
+        <div class="menuTitleDesc">
+          An interactive AI simulation in the style of a friendly video game.
+        </div>
+      </div>
+      <div class="menuBody">
+        <div class="menuAbout">
+          <div class="menuHeader">
+            About
+          </div>
+          <div class="menuText">
+            <span width="100%">[a;sldkjf;alskdjf;laksdjfl;asdkfjl;adkjfa;ldskjfa;lsdkjfal;sdkjfa;lsdkfjas;dlfkjas;dlkfjasd;lfkjasd</span>
+          </div>
+        </div>
+        <div class="menuOptions">
+          <div class="menuHeader">
+            Get Started
+          </div>
+          <div class="menuText">
+            <button class="configButton" onclick="enterSim()">Enter Simulation</button>
+          </div>
+          <div class="menuDivider"></div>
+          <div class="menuHeader">
+            Credits
+          </div>
+          <div class="menuText">
+            Created by Jeongwoo Cheon, Edward Mei, and Joseph Widjaja for the 2023 PA Media and Design Competition.
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="configButton topRight" onclick="pauseSim()">Pause Simulation</button>
     <div id="flappy-div">
       <canvas id="flappy-c"></canvas>
       <script src="%PUBLIC_URL%/assets/flappy-components/scripts/bundle.js"></script>
