--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,17 @@
       <div class="menuBody">
         <div class="menuAbout">
           <div class="menuHeader">
-            About
+            About 
           </div>
           <div class="menuText">
-            <span width="100%">[a;sldkjf;alskdjf;laksdjfl;asdkfjl;adkjfa;ldskjfa;lsdkjfal;sdkjfa;lsdkfjas;dlfkjas;dlkfjasd;lfkjasd</span>
-          </div>
-        </div>
+            <span width="100%">
+              Flappy Bird is fun and all, but what if you could train a group of birds to play the game by themselves? But instead of just passively watching the birds learn to play the game, 
+              what if you could play with how the birds adapt to the environment and know what the birds are thinking? These were the main questions that ignited the idea for this project. 
+              With the use of the NEAT (NeuroEvolution of Augmenting Topologies) algorithm, the birds' brains evolve to adapt more and more to their environment and live as long as possible with every generation. 
+              With every change you make in the box of editable parameters, see how the neural network graph (representing the brain of the best bird) also changes. Enter the simulation to try it out! 
+            </span>
+          </div> 
+        </div> 
         <div class="menuOptions">
           <div class="menuHeader">
             Get Started
@@ -55,7 +60,7 @@
         </div>
       </div>
     </div>
-    <button class="configButton topRight" onclick="pauseSim()">Pause Simulation</button>
+    <button id="pauseBtn" class="configButton topRight" onclick="pauseSim()">Pause Simulation</button>
     <div id="flappy-div">
       <canvas id="flappy-c"></canvas>
       <script src="%PUBLIC_URL%/assets/flappy-components/scripts/bundle.js"></script>
