Final Changes; finished product for computer fair
Co-authored-by: josephwidjaja100 <josephwidjaja100@users.noreply.github.com>
Co-authored-by: emei2 <emei2@users.noreply.github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,12 @@
           </div>
           <div class="menuText">
             <span width="100%">
-              Flappy Bird is fun and all, but what if you could train a group of birds to play the game by themselves? But instead of just passively watching the birds learn to play the game, 
-              what if you could play with how the birds adapt to the environment and know what the birds are thinking? These were the main questions that ignited the idea for this project. 
-              With the use of the NEAT (NeuroEvolution of Augmenting Topologies) algorithm, the birds' brains evolve to adapt more and more to their environment and live as long as possible with every generation. 
-              With every change you make in the box of editable parameters, see how the neural network graph (representing the brain of the best bird) also changes. Enter the simulation to try it out! 
+              <ul>
+                <li>See how a neural network learns how to play a game of Flappy Bird</li>
+                <li>Change the environment of the game and observe how the neural network adapts to your changes</li>
+                <li>Experiment with all of the different variables and see how it affects the birds' performance</li>
+                <li>Have a better understanding of the inner workings of AI</li>
+              </ul>
             </span>
           </div> 
         </div> 
