--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
             Credits
           </div>
           <div class="menuText">
-            Created by Jeongwoo Cheon, Edward Mei, and Joseph Widjaja for the 2023 PA Media and Design Competition.
+            Created by Jeongwoo Cheon, Edward Mei, and Joseph Widjaja for the 2023 Congressional App Challenge.
           </div>
         </div>
       </div>
