--- a/public/index.html
+++ b/public/index.html
@@ -61,12 +61,12 @@
             <button class="configButton" onclick="enterSim()">Enter Simulation</button>
           </div>
           <div class="menuDivider"></div>
-          <div class="menuHeader">
+          <!-- <div class="menuHeader">
             Credits
           </div>
           <div class="menuText">
             Created by Jeongwoo Cheon, Edward Mei, and Joseph Widjaja for the 2023 PA Media and Design Competition.
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
